<resources>
    <string name="app_name">actividad02</string>
    <string name="title">Haz click en una figura para poder calcular su superficie </string>

    // Figures
    <string name="square">Cuadrado</string>
    <string name="triangle">Triángulo</string>
    <string name="circle">Círculo</string>

    // Strings activity cuadrado
    <string name="twSquare">Área del cuadrado</string>
    <string name="twInfo">Lado (cm)</string>
    <string name="twResult">El resultado es:</string>

    // Strings activity circulo
    <string name="twCircle">Área del círculo</string>
    <string name="twInfoCircle">Radio (cm)</string>
    <string name="twResultCircle">El resutado es:</string>

    // Strings activity triangulo
    <string name="twTriangle">Área del triángulo</string>
    <string name="twBaseInfo">Base (cm)</string>
    <string name="twHeightInfo">Altura (cm)</string>

</resources>