<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#58A9D9"
    tools:context=".view.CalculatedAreaTriangleActivity">

    <TextView
        android:id="@+id/twTriangle"
        android:layout_width="187dp"
        android:layout_height="42dp"
        android:text="@string/twTriangle"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/twBaseInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.441"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.709" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="101dp"
        android:layout_height="105dp"
        android:layout_marginTop="88dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toEndOf="@+id/twTriangle"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_formula_del_area_de_un_triangulo_rectangulo" />

    <TextView
        android:id="@+id/twBaseInfo"
        android:layout_width="78dp"
        android:layout_height="30dp"
        android:layout_marginBottom="8dp"
        android:text="@string/twBaseInfo"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/etBase"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.297"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/etBase"
        android:layout_width="171dp"
        android:layout_height="42dp"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/twHeightInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.412"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/twBaseInfo" />

    <TextView
        android:id="@+id/twHeightInfo"
        android:layout_width="108dp"
        android:layout_height="31dp"
        android:layout_marginBottom="8dp"
        android:text="@string/twHeightInfo"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/etHeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.326"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etBase" />

    <EditText
        android:id="@+id/etHeight"
        android:layout_width="171dp"
        android:layout_height="42dp"
        android:layout_marginBottom="52dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btnCalcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.412"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/twHeightInfo" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:text="Calcular"
        app:layout_constraintBottom_toTopOf="@+id/twResult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etHeight" />

    <TextView
        android:id="@+id/twResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:text="@string/twResult"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/twResultArea"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalcular" />

    <TextView
        android:id="@+id/twResultArea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/twResult"
        tools:text="12312" />


</androidx.constraintlayout.widget.ConstraintLayout>