<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#63C668"
    tools:context=".view.CalculatedAreaCircleActivity">

    <TextView
        android:id="@+id/twCircle"
        android:layout_width="163dp"
        android:layout_height="37dp"
        android:text="@string/twCircle"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/twInfoCircle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.607" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="101dp"
        android:layout_height="105dp"
        android:layout_marginTop="76dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.259"
        app:layout_constraintStart_toEndOf="@+id/twCircle"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_formula_del_area_de_un_circulo" />

    <TextView
        android:id="@+id/twInfoCircle"
        android:layout_width="78dp"
        android:layout_height="30dp"
        android:layout_marginBottom="32dp"
        android:text="@string/twInfoCircle"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/etRadius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.297"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etRadius"
        android:layout_width="171dp"
        android:layout_height="42dp"
        android:layout_marginBottom="108dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btnCalcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.412"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:text="Calcular"
        app:layout_constraintBottom_toTopOf="@+id/twResultCircle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/twResultCircle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:text="@string/twResult"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/twResultArea"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/twResultArea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="88dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="12312" />


</androidx.constraintlayout.widget.ConstraintLayout>